# server/app.js
@@ -4,6 +4,7 @@ import swaggerUi from "swagger-ui-express";
 import swaggerFile from "./outputSwagger.json" with { type: "json" };
 import autorRoute from "./routes/autorRoute.js";
 import leitorRoute from "./routes/leitorRoute.js";
+import livroRoute from "./routes/livroRoute.js";
 const app = express();
 
 app.use(express.json());
@@ -15,4 +16,5 @@ app.use(
 app.use("/categorias",categoriaRoute);
 app.use("/autor",autorRoute);
 app.use("/leitor",leitorRoute);
+app.use("/livro",livroRoute);
 export default app;
